Git Tests/force-app/main/default/default/objects/Campaign/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campanhas</relationshipLabel>
    <relationshipName>Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>