Git Tests/force-app/main/default/default/objects/Campaign/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <label>Condição de pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>