Git Tests/force-app/main/default/default/objects/Campaign/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Código da campanha</label>
    <length>80</length>
    <type>Text</type>
</CustomField>