Git Tests/force-app/main/default/default/objects/Campaign/fields/FimRecorrencia__c.field-meta.xml
<CustomField>
    <fullName>FimRecorrencia__c</fullName>
    <label>Fim da recorrência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>