Git Tests/force-app/main/default/default/objects/Campaign/fields/GrupoCliente__c.field-meta.xml
<CustomField>
    <fullName>GrupoCliente__c</fullName>
    <label>Grupo de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>