Git Tests/force-app/main/default/default/objects/Campaign/fields/InicioRecorrencia__c.field-meta.xml
<CustomField>
    <fullName>InicioRecorrencia__c</fullName>
    <label>Início da recorrência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>