Git Tests/force-app/main/default/default/objects/Campaign/fields/MetaValor__c.field-meta.xml
<CustomField>
    <fullName>MetaValor__c</fullName>
    <description>Valor (em reais) da meta da campanha.</description>
    <inlineHelpText>Valor (em reais) da meta da campanha.</inlineHelpText>
    <label>Meta (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>