Git Tests/force-app/main/default/default/objects/Campaign/fields/MetaVolume__c.field-meta.xml
<CustomField>
    <fullName>MetaVolume__c</fullName>
    <description>Valor (em quantidade) da meta da campanha.</description>
    <inlineHelpText>Valor (em quantidade) da meta da campanha.</inlineHelpText>
    <label>Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>