Git Tests/force-app/main/default/default/objects/Campaign/fields/NomeCD__c.field-meta.xml
<CustomField>
    <fullName>NomeCD__c</fullName>
    <label>Nome do CD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02001</fullName>
                <label>ART MEDICA - EUSEBIO (MATRIZ)</label>
            </value>
            <value>
                <fullName>17002</fullName>
                <label>BIOHOSP - BELO HORIZONTE (FILIAL 02)</label>
            </value>
            <value>
                <fullName>17001</fullName>
                <label>BIOHOSP - CONTAGEM (MATRIZ)</label>
            </value>
            <value>
                <fullName>17003</fullName>
                <label>BIOHOSP - RIO DE JANIERO (FILIAL 03)</label>
            </value>
            <value>
                <fullName>04001</fullName>
                <label>COMERCIAL COMMED - SAO PAULO (MATRIZ)</label>
            </value>
            <value>
                <fullName>16008</fullName>
                <label>DUPATRI - BETIM (FILIAL 08)</label>
            </value>
            <value>
                <fullName>16003</fullName>
                <label>DUPATRI - CATALAO (FILIAL 03)</label>
            </value>
            <value>
                <fullName>16001</fullName>
                <label>DUPATRI - SANTOS (MATRIZ)</label>
            </value>
            <value>
                <fullName>16007</fullName>
                <label>DUPATRI - SUMARE (FILIAL 07)</label>
            </value>
            <value>
                <fullName>13003</fullName>
                <label>MEDCOM - BRASILIA (FILIAL 03)</label>
            </value>
            <value>
                <fullName>13004</fullName>
                <label>MEDCOM - CAMPO GRANDE (FILIAL 04)</label>
            </value>
            <value>
                <fullName>13002</fullName>
                <label>MEDCOM - CUIABA (FILIAL 02)</label>
            </value>
            <value>
                <fullName>13005</fullName>
                <label>MEDCOM - GOIANIA (FILIAL 05)</label>
            </value>
            <value>
                <fullName>13001</fullName>
                <label>MEDCOM - GOIANIA (MATRIZ)</label>
            </value>
            <value>
                <fullName>15001</fullName>
                <label>MOSTAERT - RECIFE (MATRIZ)</label>
            </value>
            <value>
                <fullName>01009</fullName>
                <label>NACIONAL - CONTAGEM (FILIAL 09)</label>
            </value>
            <value>
                <fullName>01010</fullName>
                <label>NACIONAL - CONTAGEM (FILIAL 10)</label>
            </value>
            <value>
                <fullName>01008</fullName>
                <label>NACIONAL - MACAE (FILIAL 08)</label>
            </value>
            <value>
                <fullName>01001</fullName>
                <label>NACIONAL - RIBEIRAO PRETO (MATRIZ)</label>
            </value>
            <value>
                <fullName>01003</fullName>
                <label>NACIONAL - S. J. RIO PRETO (FILIAL 03)</label>
            </value>
            <value>
                <fullName>01005</fullName>
                <label>NACIONAL - SANT. DE PARNAIBA (FILIAL 05)</label>
            </value>
            <value>
                <fullName>01006</fullName>
                <label>NACIONAL - SANT. DE PARNAIBA (FILIAL 06)</label>
            </value>
            <value>
                <fullName>01007</fullName>
                <label>NACIONAL - SANT. DE PARNAIBA (FILIAL 07)</label>
            </value>
            <value>
                <fullName>14003</fullName>
                <label>ONCORIO - CURITIBA (FILIAL 03)</label>
            </value>
            <value>
                <fullName>14002</fullName>
                <label>ONCORIO - ITUMBIARA (FILIAL 02)</label>
            </value>
            <value>
                <fullName>14005</fullName>
                <label>ONCORIO - PINHAIS (FILIAL 05)</label>
            </value>
            <value>
                <fullName>14001</fullName>
                <label>ONCORIO - RIO CLARO (MATRIZ)</label>
            </value>
            <value>
                <fullName>05001</fullName>
                <label>PROCIFAR DISTRIB. - SALVADOR (MATRIZ)</label>
            </value>
            <value>
                <fullName>11001</fullName>
                <label>SALUS LATAM - SAO PAULO (MATRIZ)</label>
            </value>
            <value>
                <fullName>03002</fullName>
                <label>VITAL - SALVADOR (FILIAL 02)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>