Git Tests/force-app/main/default/default/objects/Campaign/fields/RegrasCampanha__c.field-meta.xml
<CustomField>
    <fullName>RegrasCampanha__c</fullName>
    <label>Regras da campanha</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>