Git Tests/force-app/main/default/default/objects/Campaign/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <label>Validade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segunda</fullName>
            </value>
            <value>
                <fullName>Terça</fullName>
            </value>
            <value>
                <fullName>Quarta</fullName>
            </value>
            <value>
                <fullName>Quinta</fullName>
            </value>
            <value>
                <fullName>Sexta</fullName>
            </value>
            <value>
                <fullName>Sábado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>