Git Tests/force-app/main/default/default/objects/Campaign/recordTypes/Campanha.recordType-meta.xml
<RecordType>
    <fullName>Campanha</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para campanhas de produtos</description>
    <label>Campanha de produto</label>
</RecordType>