Git Tests/force-app/main/default/default/objects/Campaign/recordTypes/CampanhaVendedor.recordType-meta.xml
<RecordType>
    <fullName>CampanhaVendedor</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para campanhas (precificação/desconto para vendedor)</description>
    <label>Campanha de vendedor</label>
</RecordType>