Git Tests/force-app/main/default/default/objects/Campaign/recordTypes/ContratoShelfLife.recordType-meta.xml
<RecordType>
    <fullName>ContratoShelfLife</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para campanhas do tipo Shelf Life.</description>
    <label>Campanha de shelf life</label>
</RecordType>